@@ -5,7 +5,7 @@ use File::Which qw/ which /;
 my $path = which("uptime");
 
 plan skip_all => "no uptime found"
-    unless -x $path;
+    unless $path && -x $path;
 
 use_ok 'Sys::CpuLoad', 'uptime';
 
