@@ -1,6 +1,10 @@
 Revision history for Perl extension {{$dist->name}}:
 
 {{$NEXT}}
+  [Tests]
+  - Fix skip_all to handle when no executable is found.
+
+  - Fix comment on skip_all.
 
 0.25      2020-03-30 23:30:00+01:00 Europe/London (TRIAL RELEASE)
   [Tests]
